--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,21 @@
   <meta charset="utf-8">
   <title>Saisen</title>
   <base href="/">
-
+  
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#673ab7">
+  
+  <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+      <nav 
+    style="background-color: #673ab7; height: 56px; width: 100%">
+  </nav>
+    Loading . . .
+  </app-root>
 </body>
 </html>
